[package]
name = "ankou"
description = "An OSINT repo miner focused on high-sev security bug"
version = "0.1.0"
authors = ["bynx <drtychai@protonmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ak"
path = "src/main.rs"

[dependencies]
simple_logger ="1.11.0"
structopt = "*"

time = "0.1.44"
git2 = "0.13.12"
reqwest = { version = "0.10", features = ["blocking", "json"] }
