[package]
name = "ankou"
description = "An OSINT repo miner focused on high-sev security bug in JS engines"
repository = "https://github.com/drtychai/ankou"
version = "0.0.2"
authors = ["bynx <drtychai@protonmail.com>"]
license = "AGPL-3.0"
edition = "2018"
exclude = [
    "**/*.yml",
    "**/WebKit",
    "**/chromium",
    "**/gecko-dev",
]

[lib]
name = "ankou"
path = "src/lib.rs"

[[bin]]
name = "ak"
path = "src/main.rs"

[dependencies]
log = "0.4.11"
simple_logger ="1.11.0"

# CLI Args
paw = "1.0.0"
structopt = { version = "0.3.21", features = ["paw"] }

# Async HTTP
reqwest = { version = "0.10", features = ["blocking", "json"] }

# Git system bindings
time = "0.1.44"
git2 = "0.13.12"
